--- a/2. 개발/FreSearch/.settings/org.eclipse.core.resources.prefs
+++ b/2. 개발/FreSearch/.settings/org.eclipse.core.resources.prefs
@@ -10,3 +10,5 @@ encoding//src/main/webapp/WEB-INF/views/includes/footer.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/research/research_register.jsp=UTF-8
 encoding//src/main/webapp/resources/css/jquery-ui.css=UTF-8
 encoding//src/main/webapp/resources/js/jquery-ui.min.js=UTF-8
+encoding//src/test/java/org/fs/mapper/testMapper.java=UTF-8
+encoding//src/test/java/org/fs/service/TestServiceTests.java=UTF-8
