--- a/2. 개발/FreSearch/src/main/webapp/WEB-INF/web.xml
+++ b/2. 개발/FreSearch/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 		<async-supported>true</async-supported>
 		
 		<multipart-config>
-			<location>C:\\upload\\temp</location>
+			<location>/home/ubuntu/upload/</location>
 			<max-file-size>20971520</max-file-size> <!-- 1MB * 20 -->
 			<max-request-size>41943040</max-request-size> <!-- 40MB -->
 			<file-size-threshold>20971520</file-size-threshold> <!-- 20MB -->
