--- a/2. 개발/FreSearch/src/main/webapp/WEB-INF/web.xml
+++ b/2. 개발/FreSearch/src/main/webapp/WEB-INF/web.xml
@@ -71,6 +71,8 @@
 		/WEB-INF/spring/security-context.xml
 		</param-value>
 	</context-param>
-
+	 <error-page>
+      <location>/error</location>
+   </error-page>
 	
 </web-app>
